# pi-gpui

./: .gitignore  Cargo.toml  README.md  clippy.toml  context.md  progress.md  research.md
assets/provider-logos/: SOURCES.md
crates/pi-bridge-types/: Cargo.toml
crates/pi-bridge-types/.pi-lens/cache/: review-graph.json
crates/pi-bridge-types/bindings/: AutocompleteItem.ts  AutocompleteRequest.ts  BridgeCommand.ts  BridgeCommandEnvelope.ts  BridgeError.ts  BridgeEvent.ts  BridgeEventEnvelope.ts  BridgeResponse.ts  BridgeResponseEnvelope.ts  BridgeResponsePayload.ts  CompactCommand.ts  ComponentContent.ts  ComponentHandleId.ts  ComponentInputCommand.ts  ComponentRenderCommand.ts  ComponentRenderRequest.ts  ComponentRenderResult.ts  ComponentSlotUpdate.ts  ConfirmRequest.ts  CoreStateSnapshot.ts  CustomComponentRequest.ts  CustomMessageCommand.ts  CycleDirection.ts  CycleModelCommand.ts  Diagnostic.ts  DiagnosticLevel.ts  EditorRequest.ts  ExportCommand.ts  ExtensionUiRequest.ts  ExtensionUiResponse.ts  ExtensionUiUpdate.ts  ForkCommand.ts  ForkPosition.ts  GetThemeCommand.ts  ImageAttachment.ts  ImportJsonlCommand.ts  InitCommand.ts  InputRequest.ts  InstalledPackage.ts  LogEvent.ts  (+38 more)
crates/pi-bridge-types/src/: command.rs  error.rs  event.rs  extension_ui.rs  lib.rs  response.rs  state.rs
crates/pi-bridge-types/src/snapshots/: pi_bridge_types__tests__command_envelope_roundtrips.snap
crates/pi-core/: Cargo.toml
crates/pi-core/.pi-lens/cache/: review-graph.json
crates/pi-core/src/: lib.rs  reducer.rs  state.rs
crates/pi-core/tests/: reducer.rs
crates/pi-desktop/: Cargo.toml
crates/pi-desktop/.pi-lens/cache/: review-graph.json
crates/pi-desktop/src/: app.rs  backend.rs  instrumentation.rs  main.rs  ui.rs
crates/pi-desktop/src/app/: appearance_actions.rs  backend_flow.rs  canvas_actions.rs  chat_actions.rs  package_actions.rs  pinned_actions.rs  render.rs  workspace_actions.rs
crates/pi-desktop/src/chat/: transcript.rs
crates/pi-desktop/src/components/: auth_settings.rs  bottom_dock.rs  button.rs  chat_markdown.rs  chat_node.rs  chat_node_indicators.rs  file_picker.rs  input.rs  mod.rs  package_settings.rs  pinned_panels.rs  provider_logo.rs  status_bar.rs  surface.rs  theme_settings.rs  workspace_canvas.rs  workspace_canvas_markers.rs  workspace_canvas_minimap.rs  workspace_canvas_toolbar.rs  workspace_canvas_view.rs  workspace_launcher.rs  workspace_tabs.rs
crates/pi-desktop/src/design/: theme.rs
crates/pi-desktop/src/workspace/: canvas.rs  canvas_geometry.rs  canvas_model.rs  canvas_session.rs  canvas_spatial.rs  canvas_tests.rs  mod.rs  node_registry.rs  picker.rs  pinning.rs  state.rs
crates/pi-edon/: Cargo.toml
crates/pi-edon/.pi-lens/cache/: review-graph.json
crates/pi-edon/src/: error.rs  lib.rs  runtime.rs
crates/pi-edon/tests/: smoke.rs
crates/pi-node-host/: Cargo.toml
crates/pi-node-host/.pi-lens/cache/: review-graph.json
crates/pi-node-host/src/: config.rs  error.rs  host.rs  lib.rs  native.rs  process.rs  process_metrics.rs  worker_pool.rs
crates/pi-node-host/tests/: embedded_pi.rs  worker_pool.rs
crates/pi-sdk-bridge/: Cargo.toml
crates/pi-sdk-bridge/.pi-lens/cache/: review-graph.json
crates/pi-sdk-bridge/src/: client.rs  error.rs  lib.rs  transport.rs
crates/pi-sdk-bridge/tests/: mock_transport.rs
crates/pi-test-support/: Cargo.toml
crates/pi-test-support/src/: lib.rs
docs/: backend-foundation.md  frontend-slice.md  production-canvas-runtime-goal.md
node/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
node/.pi-lens/cache/: review-graph.json
node/src/: bootstrap.ts  process_host.ts
node/src/bridge/: dispatcher.ts  envelope.ts  errors.ts  native.ts
node/src/pi/: extension_ui.ts  package_manager.ts  package_registry.ts  resource_cache.ts  runtime.ts  runtime_helpers.ts  runtime_loader.ts
node/test/: bridge_smoke.test.ts  extension_ui.test.ts  resource_cache.test.ts
scripts/: check-loc.sh  fetch-libnode.sh  forbid-stock-pi-rpc.sh  sync-protocol.sh
xtask/: Cargo.toml
xtask/.pi-lens/cache/: review-graph.json
xtask/src/: main.rs
