[workspace]
resolver = "3"
members = [
  "vendor/edon",
  "crates/pi-bridge-types",
  "crates/pi-edon",
  "crates/pi-node-host",
  "crates/pi-sdk-bridge",
  "crates/pi-core",
  "crates/pi-test-support",
  "crates/pi-desktop",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

[patch.crates-io]
gpui-component = { path = "vendor/gpui-component" }

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
edon = { path = "vendor/edon" }
futures = "0.3.31"
insta = { version = "1.44.1", features = ["json"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serial_test = "3.2.0"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
ts-rs = { version = "11.1.0", features = ["serde-compat", "serde-json-impl"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
